@@ -956,14 +956,15 @@ See `bug-reference-url-format' for further details.")
     (setq fill-column 72))
   (unless (local-variable-p 'tab-width (current-buffer))
     (setq tab-width 4))
-  (when (and (fboundp 'bug-reference-prog-mode)
-	     ebuild-mode-enable-bug-reference)
-    (unless (local-variable-p 'bug-reference-bug-regexp (current-buffer))
-      (set (make-local-variable 'bug-reference-bug-regexp)
-	   ebuild-mode-bug-regexp))
-    (unless (local-variable-p 'bug-reference-url-format (current-buffer))
-      (set (make-local-variable 'bug-reference-url-format)
-	   ebuild-mode-bug-url-format))
+  (when (and
+	 (fboundp 'bug-reference-prog-mode)
+	 ebuild-mode-enable-bug-reference
+	 (not (local-variable-p 'bug-reference-bug-regexp (current-buffer)))
+	 (not (local-variable-p 'bug-reference-url-format (current-buffer))))
+    (set (make-local-variable 'bug-reference-bug-regexp)
+	 ebuild-mode-bug-regexp)
+    (set (make-local-variable 'bug-reference-url-format)
+	 ebuild-mode-bug-url-format)
     (bug-reference-prog-mode 1))
   (cond
    ((derived-mode-p 'conf-unix-mode)
